@@ -8,6 +8,7 @@
     * Add Net::SSLeay::SSL_CTX#set_ecdh_auto method.
     * Add Net::SSLeay::SSL_CTX#set_tmp_dh method.
     * Add Net::SSLeay::SSL_CTX#set_post_handshake_auth method.
+    * Add Net::SSLeay::SSL_CTX#use_PrivateKey method.
     
 0.011 2024-11-12
   [New Features]
